--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="description" content="Responsive site">
-        <meta name="keywords" content="HTML,CSS">
+        <meta name="keywords" content="HTML,CSS,JS">
         <meta name="author" content="Ranjan">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="style.css"/>
         <!--css file-->
 
-        <title>Home</title>
+        <title>Countdown Timer</title>
 
         <!--google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Bree+Serif|Exo|Exo+2|Lato|Mansalva|Playfair+Display&display=swap" rel="stylesheet">
